--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,10 @@ h4 {
 }
 
 .card {
-    height: 200px;
-	width: 250px;
+    /*height: 200px;
+	width: 250px;*/
+	height: 85%;
+	width: 15%;
     margin: 50px;
     box-shadow: 5px 5px 20px black;
     overflow: hidden;
@@ -78,8 +80,10 @@ h4 {
 }
 
 img {
-    height: 180px;
-	width: 350px;
+    /*height: 180px;
+	width: 350px;*/
+	height: 80%;
+	width:85%;
 	border-radius: 10px;
 }
 
@@ -120,8 +124,9 @@ img {
 	display: none;
 	padding: 1%;
 	background-color: rgb(143, 232, 211);
-	height: 280px;
+	/*height: 280px;*/
 	width: 100%;
+	height: 500px;
 	overflow: hidden;
 	align-content: center;
 	/*display: flex;*/
